MDL-69811 mod_quiz: Question bank actions title and edit overflow fix
This commit implements a fix for overflowwing 'actions' title over edit
in languages other than English such as Welsh and German.

--- a/mod/quiz/styles.css
+++ b/mod/quiz/styles.css
@@ -916,7 +916,7 @@ table#categoryquestions {
 }
 
 #categoryquestions .editmenu {
-    width: 5em;
+    padding: 0 3em 0 0.2em;
 }
 
 #categoryquestions .qtype {
